    - added GtkCList example to gtk.php. (Andrei)
    - added initial libglade support. (Andrei)
    - made Gdk::input_add() work with file resources. (Andrei)
    - fixed GDK locale support. (Alex Bokovoy)
    - reworked the generator to make it more generalized. (Andrei)
    - re-engineered the build system a bit to accomodate the need to build
      additional modules. (Andrei)
    - added helper GtkBoxChild, GtkFixedChild classes. (Andrei)
    - added properties for GtkBin, GtkMisc, GtkArrow, GtkBox, GtkCalendar, and
      GtkCTree classes. (Andrei)

Version 0.0.2 "primordial nucleosynthesis": 7-Mar-2001
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    - added 'child' property to GtkBin and its descendants. (Andrei)
    - all callbacks now take user supplied extra arguments and better error
      messages are shown if the callbacks are not valid. (Andrei)
    - added GtkCombo::set_popdown_strings(), GdkPixmap::create_from_xpm().
      (Andrei)
    - implemented support for creating menus via GtkItemFactory. (Andrei)
    - fixed loading of the extension via php.ini. (Andrei)
    - fixed timeout and idle handler marshaller so that they are called more
      than once. (Andrei)
    - added connect_object() method that allows calling an object method as a
      signal callback. (Andrei)
    - fixed a silent crash that was happening due to object corruption. (Andrei)
    - implemented GtkTipsQuery class. (Andrei)


Version 0.0.1 "Genesis": 1-Mar-2001
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    - first release. (Andrei)


# vim: set et tw=80 ai sts=4: