@@ -74,14 +74,73 @@ PHP_FUNCTION(wrap_glade_xml_signal_connect)
 	RETURN_NULL();
 }
 %%
-override glade_xml_autoconnect
+override glade_xml_signal_autoconnect
 static void glade_connect_auto(const gchar *handler_name, GtkObject *obj,
 							   const gchar *signal_name, const gchar *signal_data,
 							   GtkObject *connect_object, gboolean after,
-							   zval *callback_data)
+							   zval *map)
 {
+	zval **callback_data = NULL;
+	zval **callback_ptr = NULL, *extra = NULL, *params = NULL;
+	zval *callback, *data, *object = NULL;
+	int pass_object = 1;
+	char *callback_filename;
+	uint callback_lineno;
+	ELS_FETCH();
+
+	if (map && zend_hash_find(Z_ARRVAL_P(map), (char *)handler_name, strlen(handler_name) + 1, (void **)&callback_data) == SUCCESS) {
+		if (Z_TYPE_PP(callback_data) != IS_ARRAY ||
+			zend_hash_index_find(Z_ARRVAL_PP(callback_data), 0, (void **)&callback_ptr) == FAILURE) {
+			php_error(E_WARNING, "%s() is supplied with invalid callback structure for handler '%s'", get_active_function_name(), handler_name);
+			return; 
+		}
+		zval_add_ref(callback_ptr);
+		callback = *callback_ptr;
+		zend_hash_index_del(Z_ARRVAL_PP(callback_data), 0);
+		extra = *callback_data;
+	} else {
+		MAKE_STD_ZVAL(callback);
+		ZVAL_STRING(callback, (char *)handler_name, 1);
+	}
+
+	if (!zend_is_callable(callback, 0, NULL)) {
+		php_error(E_WARNING, "%s() is unable to autoconnect callback for handler '%s'",
+				  get_active_function_name(), handler_name);
+		return;
+	}
+	
+	MAKE_STD_ZVAL(params);
+	array_init(params);
+
+	if (connect_object) {
+		zval *temp;
+
+		pass_object = 0;
+		object = php_gtk_new(connect_object);
+		add_next_index_zval(params, object);
+	}
+	
+	if (extra)
+		php_array_merge(Z_ARRVAL_P(params), Z_ARRVAL_P(extra), 0);
+
+	callback_filename = zend_get_executed_filename(ELS_C);
+	callback_lineno = zend_get_executed_lineno(ELS_C);
+	data = php_gtk_build_value("(NNisi)", callback, params, pass_object,
+							   callback_filename, callback_lineno);
+	gtk_signal_connect_full(obj, signal_name, NULL,
+							(GtkCallbackMarshal)php_gtk_callback_marshal,
+							data, php_gtk_destroy_notify, FALSE, after);
 }
 
 PHP_FUNCTION(wrap_glade_xml_signal_autoconnect)
 {
+	zval *map = NULL;
+
+	NOT_STATIC_METHOD();
+
+	if (!php_gtk_parse_args(ZEND_NUM_ARGS(), "|a", &map))
+		return;
+
+	glade_xml_signal_autoconnect_full(GLADE_XML(PHP_GTK_GET(this_ptr)),
+									  (GladeXMLConnectFunc)glade_connect_auto, map);
 }
